
WIP      [MANUALS] Import the number of supported PDF filters.

WIP      [MANUALS] When displaying manuals use cached extracted images if they exist.

WIP      [MANUALS] Progress bar when extracting PDF pages.

WIP      [MANUALS] Support for CBZ/CBR manuals.
         Wait until this is implemented in AEL and then port it from AEL into AML?


[B]Advanced MAME Launcher | version 0.9.8 | xx June 2018[/B]

FEATURE  Documentation in README.md improved.

FEATURE  [LEIA] Kodi Leia will cache the Python interpreter which means submodules will only
         be executed once and cached. sys.argv must be propagated from the entry point code
         into the submodules.
         See https://github.com/xbmc/xbmc/pull/13814
         and https://forum.kodi.tv/showthread.php?tid=303073&pid=2729071#pid2729071

FIX      Changed source code files to remove BOM. This is necessary to pass Travis tests of
         Kodi official repo.


FIX      ActivateWindow(busydialog) and Dialog.Close(busydialog) have been deprecated.
         See https://github.com/xbmc/xbmc/pull/13958
         and https://github.com/xbmc/xbmc/pull/13954
         and https://github.com/xbmc/xbmc/pull/10699


[B]Advanced MAME Launcher | version 0.9.7 | 09 June 2018[/B]

FEATURE  Implemented settings "display_rom_available" and "display_chd_available".

FEATURE  [LAUNCH] Implement "Action on Kodi playing media", "After/before launch delay (ms)", and
         "Suspend/resume Kodi audio engine".
         See https://github.com/Wintermute0110/plugin.program.AML/issues/3

FEATURE  [MAME FILTERING] Improve the Custom Filters (add more filtering options as defined
         in the reference filter file `AML-MAME-filters-reference.xml`).

FEATURE  [CORE] Render the `In Favourites` flag for MAME machines.

FEATURE  [CORE] Optimize the rendering of ROMs in 3 steps: a) Loading, b) Processing and c) Rendering.
         Processing computes all data to render ROMs and Rendering calls Kodi functions. This will