@@ -29,7 +29,7 @@ WIP      [MANUALS] Support for CBZ/CBR manuals.
          Wait until this is implemented in AEL and then port it from AEL into AML?
 
 
-[B]Advanced MAME Launcher | version 0.9.8 | xx June 2018[/B]
+[B]Advanced MAME Launcher | version 0.9.8 | 23 June 2018[/B]
 
 FEATURE  Documentation in README.md improved.
 
@@ -42,11 +42,15 @@ FEATURE  [LEIA] Kodi Leia will cache the Python interpreter which means submodul
 FIX      Changed source code files to remove BOM. This is necessary to pass Travis tests of
          Kodi official repo.
 
-
 FIX      ActivateWindow(busydialog) and Dialog.Close(busydialog) have been deprecated.
          See https://github.com/xbmc/xbmc/pull/13958
          and https://github.com/xbmc/xbmc/pull/13954
          and https://github.com/xbmc/xbmc/pull/10699
+
+FIX      Do not use the xbmc.Player() in launcher addons. Instead, use functions like
+         xbmc.getCondVisibility("Player.HasMedia"), xbmc.executebuiltin("PlayerControl(stop)"), etc.
+         Change proposed by enen92.
+         See https://github.com/xbmc/repo-plugins/pull/1886#discussion_r196591764
 
 
 [B]Advanced MAME Launcher | version 0.9.7 | 09 June 2018[/B]
